--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,3 +1,4 @@
-= render :partial => "layouts/table",
-         :locals => { :attrs => [:name],
-                      :objects => @categories }
+- cache :categories, :expires_in => 1.day do
+  = render :partial => "layouts/table",
+           :locals => { :attrs => [:name],
+                        :objects => @categories }
